CostalCloud/force-app/main/default/objects/Apex_Activation_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings used to disable triggers on demand</description>
    <fields>
        <fullName>Disable_Account_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable all triggers that have been coded to use this custom setting</description>
        <inlineHelpText>Disable all triggers that have been coded to use this custom setting</inlineHelpText>
        <label>Disable Account Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_All_Registered_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable all triggers that have been coded to use this custom setting</description>
        <inlineHelpText>Disable all triggers that have been coded to use this custom setting</inlineHelpText>
        <label>Disable All Registered Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Case_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable all triggers that have been coded to use this custom setting</description>
        <inlineHelpText>Disable all triggers that have been coded to use this custom setting</inlineHelpText>
        <label>Disable Case Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Contact_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable all triggers that have been coded to use this custom setting</description>
        <inlineHelpText>Disable all triggers that have been coded to use this custom setting</inlineHelpText>
        <label>Disable Contact Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Installers_Available_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable all triggers that have been coded to use this custom setting</description>
        <inlineHelpText>Disable all triggers that have been coded to use this custom setting</inlineHelpText>
        <label>Disable Installers Available Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Leads_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable all triggers that have been coded to use this custom setting - for Leads custom object</description>
        <inlineHelpText>Disable all triggers that have been coded to use this custom setting - for Leads custom object</inlineHelpText>
        <label>Disable Leads Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Opportunity_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable all triggers that have been coded to use this custom setting</description>
        <inlineHelpText>Disable all triggers that have been coded to use this custom setting</inlineHelpText>
        <label>Disable Opportunity Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_SA_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Svc Appointment Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_WorkOrder_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable all triggers that have been coded to use this custom setting</description>
        <inlineHelpText>Disable all triggers that have been coded to use this custom setting</inlineHelpText>
        <label>Disable WorkOrder Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_Integration_User_Id__c</fullName>
        <label>SF Integration User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Apex Activation Settings</label>
</CustomObject>